--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,8 @@
   "cmake.configureOnOpen": true,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "test.C": "cpp"
-  }
+    "test.C": "cpp",
+    "Assignment1.C": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
